# Analysis

./: README.md  pyproject.toml
analysis/: __init__.py  analysis.py  iscat_data_processor.py  processing.py  symmetry.py  widgets.py
usage_examples/: 2d_sweep.py  2d_sweep2.py  browse_data.py  edit_peaks.py  process_data.py  simple_animation.py  wavelen_sweep.py
